# Joint-Space-Project

./: .gitignore  .nfs0000000005fa377e00000001  CMakeLists.txt  README.md  package.xml  random_test.py  random_test_output.txt  setup.py
data/: get_data.py
src/: Test.py  random_test.py
src/data/: get_data.py  get_weights.py  get_weights_using_data.py  use_data.py
